Add project details for Blood Culture Volume Gauge

--- a/projects/bc-volume-gauge.html
+++ b/projects/bc-volume-gauge.html
@@ -1,1 +1,14 @@
+<h1>Blood Culture Volume Gauge</h1>
+
+<p><strong>Problem:</strong> Inconsistent blood culture volumes affect lab accuracy.</p>
+
+<p><strong>Solution:</strong> Designed a mechanical gauge to verify volume visually.</p>
+
+<ul>
+  <li>CAD: SolidWorks</li>
+  <li>Manufacturing: 3D printed prototype</li>
+  <li>Status: Prototype tested</li>
+</ul>
+
+<a href="../engineering.html">← Back to Engineering</a>
 
