--- a/engineering.html
+++ b/engineering.html
@@ -1,19 +1,77 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Engineering</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 <nav class="top-nav">
   <a href="index.html">Home</a>
-  <a href="engineering.html">Engineering</a>
-  <a href="processimprovement">Process Improvement</a>
+  <a href="resume.html">Resume</a>
+  <a href="engineering.html">Engineering Projects</a>
+  <a href="processimprovement.html">Process Improvement</a>
+  <a href="personalprojects.html">Personal Projects</a>
+  <a href="contact.html">Contact</a>
 </nav>
+
+<div class="container">
 
 <div class="layout">
   <aside class="sidebar">
-    <h3>Engineering Projects</h3>
+    <h3>Engineering – Table of Contents</h3>
     <ul>
-      <li><a href="projects/bc-volume-gauge.html">Blood Culture Volume Gauge</a></li>
+      <li><a href="projects/sandpaper-machine-automation.html">Sandpaper Machine Automation</a></li>
+      <li><a href="projects/mohrs-circle-plotter.html">Mohr’s Circle Plotter</a></li>
+      <li><a href="projects/pv-system-design.html">PV System Design</a></li>
+      <li><a href="projects/thermally-efficient-wall.html">Thermally Efficient Wall</a></li>
+      <li><a href="projects/blood-culture-volume-gauge.html">Blood Culture Volume Gauge</a></li>
     </ul>
   </aside>
 
   <main class="content">
     <h1>Engineering Projects</h1>
-    <p>Select a project from the sidebar.</p>
+    <p>Select a project from the sidebar, or browse the highlights below.</p>
+
+    
+<div class="card">
+  <h2><a href="projects/sandpaper-machine-automation.html">Sandpaper Machine Automation</a></h2>
+  <p>Sandpaper Machine wanted to automate loading, fixturing, and unloading 6"×6" CNC-textured wood blocks. Blocks had inconsistent geometry and groove locations due to manual cutting.</p>
+  <p><span class="badge">SOLIDWORKS</span><span class="badge">3D printer</span><span class="badge">Mill (for some purchased parts)</span><span class="badge">KUKA KR-6 (test setup)</span></p>
+</div>
+
+
+<div class="card">
+  <h2><a href="projects/mohrs-circle-plotter.html">Mohr’s Circle Plotter</a></h2>
+  <p>Materials testing often requires Mohr’s Circle to find principal stresses/strains. Strain rosettes measure strain; stresses are derived using Hooke’s Law.</p>
+  <p><span class="badge">MATLAB App Designer</span></p>
+</div>
+
+
+<div class="card">
+  <h2><a href="projects/pv-system-design.html">PV System Design</a></h2>
+  <p>Design a PV system for 354 K Street to offset annual usage of 9,406 kWh, within PG&E net energy metering limits.</p>
+  <p><span class="badge">PG&E bills (2023)</span><span class="badge">NREL Global Horizontal Solar Irradiance data</span><span class="badge">Manufacturer datasheets (First Solar)</span></p>
+</div>
+
+
+<div class="card">
+  <h2><a href="projects/thermally-efficient-wall.html">Thermally Efficient Wall</a></h2>
+  <p>CSU Sacramento needed alternative thermally efficient designs for a south-facing wall of a new building.</p>
+  <p><span class="badge">MATLAB</span><span class="badge">NSRDB weather data</span><span class="badge">2022 Building Energy Efficiency Standards</span></p>
+</div>
+
+
+<div class="card">
+  <h2><a href="projects/blood-culture-volume-gauge.html">Blood Culture Volume Gauge</a></h2>
+  <p>Blood culture bottles from various collection sites must be filled to correct volumes. Previously, staff marked three separate bottles by hand (wasteful and time-consuming).</p>
+  <p><span class="badge">Micrometer</span><span class="badge">SOLIDWORKS</span><span class="badge">3D printer</span></p>
+</div>
+
   </main>
 </div>
+
+</div>
+</body>
+</html>
