Revise professional summary in index.html
Updated the professional summary to reflect personal traits and teamwork skills.

--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
 <div class="card">
   <h2>Professional Summary</h2>
   <p>
-    Engineer-in-Training with a B.S. in Mechanical Engineering and a strong foundation in thermal systems,
-    fluid mechanics, and mechanical design. Experienced in project support across the full lifecycle—from
-    design and analysis to procurement, construction support, and documentation. Skilled in SolidWorks,
-    MATLAB, and thermal and PV system modeling, with a proven ability to collaborate in multidisciplinary teams.
-    Demonstrated ability to deliver safe, efficient, and cost-effective engineering solutions aligned with utility
-    standards and environmental objectives.
+    I’m naturally curious and enjoy learning new things, especially when it helps me do my 
+    work better. I’m organized, detail-oriented, and disciplined — traits that show up in how 
+    I approach problems and follow projects through to completion. I take ownership of my work 
+    and take pride in improving processes and systems that help move a business forward.
+
+    I enjoy collaborating with others and working as part of a team to meet shared goals. I 
+    don’t shy away from challenges — I tend to take them head-on, because I genuinely enjoy 
+    solving problems and learning along the way. I bring a broad range of skills to my work 
+    and am always looking for opportunities to apply them, grow them, and pick up new ones.
   </p>
 </div>
 
